# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "hpqmls"
version = "0.1.0"
edition = "2024"

[dependencies]
openmls = { git = "https://github.com/openmls/openmls.git", features = [
    "extensions-draft-08",
] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", features = [
    "clonable",
] }
openmls_traits = { git = "https://github.com/openmls/openmls.git", features = [
    "extensions-draft-08",
] }
openmls_memory_storage = { git = "https://github.com/openmls/openmls.git", features = [
    "extensions-draft-08",
] }
serde = "1.0.219"
tap = "1.0.1"
thiserror = "2.0.12"
tls_codec = "0.4.2"

[dev-dependencies]
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git" }

[patch."https://github.com/openmls/openmls.git"]
openmls = { git = "https://github.com/boxdot/openmls.git", branch = "dima/post-quantum-support" }
openmls_basic_credential = { git = "https://github.com/boxdot/openmls.git", branch = "dima/post-quantum-support" }
openmls_rust_crypto = { git = "https://github.com/boxdot/openmls.git", branch = "dima/post-quantum-support" }
openmls_traits = { git = "https://github.com/boxdot/openmls.git", branch = "dima/post-quantum-support" }
openmls_memory_storage = { git = "https://github.com/boxdot/openmls.git", branch = "dima/post-quantum-support" }

[patch.crates-io]
hpke-rs = { git = "https://github.com/boxdot/hpke-rs", branch = "dima/p384" }
hpke-rs-crypto = { git = "https://github.com/boxdot/hpke-rs", branch = "dima/p384" }
hpke-rs-rust-crypto = { git = "https://github.com/boxdot/hpke-rs", branch = "dima/p384" }

[package.metadata.cargo-machete]
ignored = [
    "openmls_memory_storage", # include to enable the `extensions-draft-08` feature
]
