# SPDX-FileCopyrightText: 2025 Phoenix R&D GmbH <hello@phnx.im>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "apqmls"
description = "Amortized Post-Quantum MLS Combiner"
authors = ["Phoenix R&D GmbH <hello@phnx.im>"]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
openmls = { git = "https://github.com/openmls/openmls.git", features = [
    "extensions-draft-08",
] }
openmls_basic_credential = { git = "https://github.com/openmls/openmls.git", features = [
    "clonable",
] }
openmls_traits = { git = "https://github.com/openmls/openmls.git", features = [
    "extensions-draft-08",
] }
openmls_memory_storage = { git = "https://github.com/openmls/openmls.git", features = [
    "extensions-draft-08",
] }
serde = "1.0.219"
tap = "1.0.1"
thiserror = "2.0.12"
tls_codec = "0.4.2"

[dev-dependencies]
openmls_rust_crypto = { git = "https://github.com/openmls/openmls.git" }
ciborium = "0.2"

[patch."https://github.com/openmls/openmls.git"]
# feat: Post-Quantum Cryptography support (ML-KEM + ML-DSA)
# <https://github.com/openmls/openmls/pull/1994>
# openmls = { git = "https://github.com/boxdot/openmls.git", rev = "6dbc03016f2f0c33d1a358d5427c2d6075f1da34" }
# openmls_basic_credential = { git = "https://github.com/boxdot/openmls.git", rev = "6dbc03016f2f0c33d1a358d5427c2d6075f1da34" }
# openmls_rust_crypto = { git = "https://github.com/boxdot/openmls.git", rev = "6dbc03016f2f0c33d1a358d5427c2d6075f1da34" }
# openmls_traits = { git = "https://github.com/boxdot/openmls.git", rev = "6dbc03016f2f0c33d1a358d5427c2d6075f1da34" }
# openmls_memory_storage = { git = "https://github.com/boxdot/openmls.git", rev = "6dbc03016f2f0c33d1a358d5427c2d6075f1da34" }
openmls = { path = "../openmls/openmls" }
openmls_basic_credential = { path = "../openmls/basic_credential/" }
openmls_rust_crypto = { path = "../openmls/openmls_rust_crypto/" }
openmls_traits = { path = "../openmls/traits/" }
openmls_memory_storage = { path = "../openmls/memory_storage/" }

[patch.crates-io]
# feat: add p384 support
# <https://github.com/cryspen/hpke-rs/pull/150>
# hpke-rs = { git = "https://github.com/cryspen/hpke-rs", rev = "eeeb9ed4204b608f257ec69166e67e25ebe8c8bd" }
# hpke-rs-crypto = { git = "https://github.com/cryspen/hpke-rs", rev = "eeeb9ed4204b608f257ec69166e67e25ebe8c8bd" }
# hpke-rs-rust-crypto = { git = "https://github.com/cryspen/hpke-rs", rev = "eeeb9ed4204b608f257ec69166e67e25ebe8c8bd" }
hpke-rs = { path = "../hpke-rs" }
hpke-rs-crypto = { path = "../hpke-rs/traits/" }
hpke-rs-rust-crypto = { path = "../hpke-rs/rust_crypto_provider/" }

[package.metadata.cargo-machete]
ignored = [
    "openmls_memory_storage", # include to enable the `extensions-draft-08` feature
]
